@@ -1,8 +1,8 @@
 Changes between 1.1.1 and 1.1.0
 =====================================
 
-- introduce automatic lookup of 'pytest11' entrypoints
-  via setuptools' pkg_resources.iter_entry_points
+- introduce automatic plugin registration via 'pytest11' 
+  entrypoints via setuptools' pkg_resources.iter_entry_points
 
 - fix py.test dist-testing to work with execnet >= 1.0.0b4 
 
@@ -11,6 +11,8 @@ Changes between 1.1.1 and 1.1.0
 - svn paths: fix a bug with path.check(versioned=True) for svn paths,
   allow '%' in svn paths, make svnwc.update() default to interactive mode 
   like in 1.0.x and add svnwc.update(interactive=False) to inhibit interaction.
+
+- refine distributed tarball to contain test and no pyc files
 
 - try harder to have deprecation warnings for py.compat.* accesses
   report a correct location
